# syft-extras

./: CHANGELOG.md  DEVELOPMENT.md  PACKAGE_MANAGEMENT.md  README.md  TESTING_AND_LINTING.md  justfile  lint.ps1  lint.sh  pyproject.toml  test.ps1  test.sh
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
automail_logs/: message_log.json
docs/: architecture-overview.md  github-release-workflow.md  syft-core.md  syft-event.md  syft-http-bridge.md  syft-proxy.md
examples/automail/: ai_settings.json  automail_ai_server.py  automail_client.py  automail_server.py  automail_unified.py  client.py  ping.py  ping_server.py
examples/automail_old/: automail_client.py  automail_monitor.py  automail_server.py  automail_unified.py  automail_web.py
examples/automail_old_2/: client.py
examples/crud/: README.md  crud_client.py  crud_server.py
examples/crud_sqlite/: README.md  crud_sql_client.py  crud_sql_server.py
examples/http_bridge/: http_client.py  http_server.py
examples/nats_bridge/: server.py
examples/ollama_http/: client.py  ollama_app.py  ollama_bridge_config.yaml
examples/pingpong/: README.md  ping_request.py  pong_server.py
examples/pingpong_consolidated/: README.md  pingpong_client.py
examples/pingpong_library_client/: Ping Pong Lib Tutorial.ipynb  README.md  pingpong.py  pingpong_old.py
examples/syft_chat/: Syft Chat Tutorial.ipynb  syft_chat.py
examples/syft_chat_basic/: README.md  syft_chat.py
examples/syft_chat_stateful/: README.md  Syft Chat Stateful Tutorial.ipynb  (+10 more)
js-sdk/: README.md
syft_extras/: __init__.py
(+30 files in other folders)
