[project]
name = "syft-extras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "syft-core",
    "syft-crypto",
    "syft-event",
    "syft-rpc",
    "syft-proxy",
    "syft-http-bridge",
    "syft-high-low",
    "commitizen>=4.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
syft-core = { workspace = true }
syft-crypto = { workspace = true }
syft-event = { workspace = true }
syft-rpc = { workspace = true }
syft-proxy = { workspace = true }
syft-http-bridge = { workspace = true }
syft-high-low = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
exclude = [".archive"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[dependency-groups]
dev = ["pytest>=8.3.4"]
cli = ["syft-http-bridge[cli]"]
